# os-rust

./: Cargo.toml
.cargo/: config.toml
src/: main.rs
